[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "brewt"
version = "0.2.0"
description = "Python module for generating password lists from potential options"
authors = [{ name = "Gregory Boyce", email = "gregory@smoltech.us" }]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/techstoa/brewt"

[project.scripts]
brewt = "brewt:main"

[tool.setuptools]
py-modules = ["brewt"]
