[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "brewt"
version = "0.2.5"
description = "Python module for generating password lists from potential options"
authors = [{ name = "Gregory Boyce", email = "gregory@smoltech.us" }]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/techstoa/brewt"

[project.scripts]
brewt = "brewt:main"

[tool.setuptools]
py-modules = ["brewt"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring GPG (deselect with '-m \"not e2e\"')",
]
addopts = "-m 'not e2e'"
